# design-patterns-py

./: pyproject.toml
creational/: factory_method.py  prototype.py  singleton.py
